Refactoring delete account endpoint
